# ai-news-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: api.py  streamlit_app.py
mlruns/1/24ba25d095d94f6fbb193c466541dad8/artifacts/: metadata.json
mlruns/1/b7400b6641014962a875e2e9e5c9627f/artifacts/: metadata.json  tfidf_vectorizer.joblib  train_config.yaml
mlruns/1/dd6b112f02c94e0aa3392ad661e43b48/artifacts/: tfidf_vectorizer.joblib
mlruns/1/models/m-1b3a6db71e584c439d647db6e76e95a2/artifacts/: MLmodel  model.skops
mlruns/1/models/m-a671329bcd644611a1a3c98fc892c01a/artifacts/: MLmodel  conda.yaml  model.skops  python_env.yaml
mlruns/1/models/m-c07ac4ae88ea49fea25e31ca71edc83d/artifacts/: MLmodel  conda.yaml  model.skops
mlruns/1/models/m-cd353e854ab541378b98965ff69f90d7/artifacts/: MLmodel  model.skops  requirements.txt
mlruns/1/models/m-f9c2af36e8b849dba8a63b1630619d8b/artifacts/: MLmodel  model.skops
notebooks/: 01_eda.ipynb
src/news_classifier/: compare_models.py  config.py  config_loader.py  logger.py  model_factory.py  predict.py  preprocess.py  train.py
src/news_classifier/services/: model_service.py
tests/: test_api.py  test_model_service.py  test_preprocess.py
